# terminal_tomato

./: .gitignore  Cargo.toml  README.md  config.toml.example
agent_tasks/: lessons.md  todo.md
src/: main.rs
