[package]
name = "terminal_tomato"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
ratatui = "0.26"
rodio = { version = "0.19", features = ["symphonia-mp3"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
